# CircuitPython_Waveform

./: .readthedocs.yaml  README.rst  pyproject.toml  relic_waveform.py  requirements.txt  synthwaveform.py
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst
docs/_static/: square-1.jpg.license
examples/: synthwaveform_oscilloscope.py  synthwaveform_simpletest.py  synthwaveform_synthio.py  waveform_oscilloscope.py  waveform_simpletest.py  waveform_synthio.py
